# FIMserv

./: CONTRIBUTING.md  HUC.csv  OWPFIMProductionfunctions.py  OWPHANDfim.ipynb  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
GeoGLOWS/: GeoGLOWS.ipynb
GeoGLOWS/hydrotable/: fim45geoglows_12060102.csv  fim45geoglows_12060202.csv
docs/: FIMin3steps.ipynb  HUC.csv  code_usage.ipynb
docs/_build/html/: .buildinfo  FIMin3Steps.html  detailedusage.html  genindex.html  getting_started.html  index.html  installation.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: FIMin3Steps.doctree  detailedusage.doctree  environment.pickle  getting_started.doctree  index.doctree  installation.doctree
docs/_build/html/_sources/: getting_started.rst.txt  index.rst.txt  installation.rst.txt
docs/_build/html/_static/: alabaster.css
docs/source/: FIMin3Steps.rst  conf.py  detailedusage.rst
docs/subsetBoundary/: subsetBoundary.dbf  subsetBoundary.shp  subsetBoundary.shx
src/fimserve/: __init__.py  datadownload.py  intersectedHUC.py  runFIM.py  vizualizationFIM.py
src/fimserve.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fimserve/enhancement_withSM/: SM_prediction.py  SM_preprocess.py  __init__.py  building_exposure.py  interactS3.py  pop_exposure.py  preprocessFIM.py  surrogate_model.py  utlis.py
src/fimserve/fimevaluation/: __init__.py  fims_setup.py  run_fimeval.py  utilis.py  utils.py
src/fimserve/plot/: __init__.py  comparestreamflow.py  nwmfid.py  src.py  usgs.py  usgsandfid.py
src/fimserve/statistics/: __init__.py  calculatestatistics.py
src/fimserve/streamflowdata/: __init__.py  forecasteddata.py  geoglows.py  nwmretrospective.py  usgsdata.py
tests/: test_03020202.py  test_SMenhancement.py  test_computationaltime.py  test_cumulativetime.py  test_datadownload.py  test_evalutionhandfim.py  test_forecasteddata.py  test_geoglows.py  test_intersectedHUC8.py  test_nwmdata.py  test_plot.py  test_runfim.py  test_statistics.py  test_subsetFIM.py
